2012-01-11  Vanessa Gil  <vanessa.gil@artica.es>
	  godmode/netflow/nf_edit_form.php
	  godmode/netflow/nf_report.php
	  godmode/netflow/nf_report_form.php
	  godmode/netflow/nf_report_item.php
	  include/functions_netflow.php
	  operation/netflow/nf_view.php: netflow acl.

2012-01-11  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_graph.php,
	  include/functions_netflow.php,
	  operation/netflow/nf_view.php: Fixed netflow stacked charts. Moved
	  code from nf_view to functions in functions_netflow. Several other
	  fixes.

2012-01-11  Sancho Lerena <slerena@artica.es>

	*  images/status_sets/color_text/*.png: Updated icons missing
	for this iconset.

2012-01-11  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.sql
	  godmode/netflow/nf_edit_form.php
	  godmode/netflow/nf_edit.php
	  godmode/netflow/nf_report.php
	  godmode/netflow/nf_report_form.php
	  godmode/netflow/nf_report_item.php
	  godmode/netflow/nf_reporting.php
	  operation/netflow/nf_view.php: netflow acls.

2012-01-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_api.php: Added new functions 
	set_create_snmp_module and set_create_data_module in the Api.

2012-01-11  Junichi Satoh  <junichi@rworks.jp>

	* mobile/operation/agents/view_agents.php: Fixed graph generation
	failure.

2012-01-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_api.php: Added new functions 
	set_create_plugin_module and set_create_alert_template in the Api.

2012-01-10  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.sql
	  pandoradb.oracle.sql
	  pandoradb.postgreSQL.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql
	  godmode/netflow/nf_edit_form.php
	  operation/netflow/nf_view.php: Changes in output format
	of netflow.

2012-01-10  Vanessa Gil  <vanessa.gil@artica.es>
	* operation/netflow/nf_view.php: Fixed filter
	netflow.
