@@ -1,3 +1,8 @@
+2012-01-11  Ramon Novoa  <rnovoa@artica.es>
+
+	* include/functions_netflow.php,
+	  operation/netflow/nf_view.php: Fixed netflow raw data tables.
+
 2012-01-11  Vanessa Gil  <vanessa.gil@artica.es>
 	  godmode/netflow/nf_edit_form.php
 	  godmode/netflow/nf_report.php
